# abridge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
abridge/: __init__.py  cli.py  correlator.py  models.py  runner.py  sink.py  tap.py
abridge/anthropic/: __init__.py  gateway.py  service.py
abridge/oai/: __init__.py  gateway.py  service.py
agentix/bridge/anthropic/: __init__.py  gateway.py  service.py
agentix/bridge/oai/: __init__.py  gateway.py
tests/: test_correlator.py  test_roundtrip.py  test_sink.py
