[project]
name = "abridge"
version = "0.2.0"
description = "Anthropic-shaped HTTP proxy for OpenAI-compatible providers, bridged across the agentix sandbox boundary"
requires-python = ">=3.11"
dependencies = [
    "agentixx",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
]

[tool.uv.sources]
agentixx = { git = "https://github.com/Agentiix/Agentix.git" }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abridge"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
include = ["abridge", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
# pyright picks up the local uv-managed venv for third-party type stubs
# (openai, agentix, ...).
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py"]
