[project]
name = "agentix-bridge"
version = "0.2.0"
description = "Provider-shaped HTTP proxies that bridge LLM calls across the agentix sandbox boundary (import as `agentix.bridge`)"
requires-python = ">=3.11"
dependencies = [
    "agentixx>=0.2.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship under the `agentix.bridge` namespace so consumers `import
# agentix.bridge.anthropic` / `import agentix.bridge.oai`.
packages = ["agentix/bridge"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
include = ["agentix", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py"]
