[project]
name = "agentix-bridge"
version = "0.2.0"
description = "Provider-shaped HTTP proxies that bridge LLM calls across the agentix sandbox boundary (import as `agentix.bridge`)"
requires-python = ">=3.11"
dependencies = [
    "agentixx>=0.2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["uv_build>=0.7,<0.9"]
build-backend = "uv_build"

# uv_build is uv's own backend — no extra build deps need to land in
# the nix sandbox at build time. We ship under the `agentix.bridge`
# namespace; tell uv_build where the module lives (the dist name
# `agentix-bridge` doesn't match the directory layout).
[tool.uv.build-backend]
module-name = "agentix.bridge"
module-root = ""
namespace = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
include = ["agentix", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py"]
